# rpi-pico-w-telnet-server

./: CMakeLists.txt  LICENSE.txt  README.md
src/: flash_store.c  flash_store.h  main.c  server.c  server.h
